shinsplat_variables:
	6/14/2024
		A basic variable implementation, add $VARIABLES
		to your text input and use a dictionary/JSON
		to describe the changes, "VARIABLES": "this stuff",
shinsplat_string_interpolated:
	6/14/2024
		The existing text nodes didn't fit my needs,
		I enabled dynamic prompts and added the END
		directive.
sinsplat_python:
	6/9/2024
		Run python code from a text node
shinsplat_green_box
	6/16/2024
		I added the "END" directive, everything after this uppercase term is ignored.
	6/9/2024
		I expected to utilize comments in the prompts so people could
		make notes.  After testing multi-line elements, again, I ran
		into an issue, so instead of the more complex quoted prompts
		I've decided to just read lines, and ignore redundant line breaks.
		So your prompt iterations will be separated by the line ending \n
		so hitting the <enter> after a prompt, like you'll find in
		wildcard files, is the way to go.
	6/8/2024
		Added
shinsplat_clip_text_encode
	6/17/2024
		Updated to include the T5, 'END' directive is honored,
		blocks are no longer needed in t5 so, while the blocks are
		are still split in 'l', 'h' and 'g' the t5 block is just
		1 segment, as it apparently should be.

	6/16/2024
		Custom inputs were being passed to prompt_out, this is probably
		not an expected behavior and noodles can be piped into the areas
		needed instead of using this node as a gateway.  I removed flaw.

		"END" directive respected on all inputs separately.

		Output tokens now accurately representing inputs.

	6/6/2024
		The prompt_before wasn't working properly, should be fixed now.

	6/2/2024
		I added a couple of switches to improve my entertainment value,
		they shift the tensor weights and reverse them.  The results
		are not unpleasant.

		And on this same day I turned these switches into directives
		because I didn't like the clutter.

		CLIP_INVERT
		POOL_INVERT
		CLIP_SHIFT
		POOL_SHIFT

	6/1/2024
		updated to be compatible with Cascade
